[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Code/Game/Menu/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Menu/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Menu/Overlay.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Menu/Title.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Menu/StartButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Menu/OptionsButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Menu/CreditsButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Menu/GameCenterBtn.png" type="Texture" id=8]

[node name="StartMenu" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundOverlay" type="TextureRect" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -65.0
margin_right = 63.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="StartButton" type="TextureButton" parent="." index="3" groups=[
"Button",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -6.0
margin_right = 40.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Mouse", "Textures", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsButton" type="TextureButton" parent="." index="4" groups=[
"Button",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = 45.0
margin_right = -2.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CreditsButton" type="TextureButton" parent="." index="5" groups=[
"Button",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = 45.0
margin_right = 68.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="GameCenterButton" type="TextureButton" parent="." index="6" groups=[
"Button",
]]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 3.0
margin_right = 25.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]


